manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: angularwebapp
spec:
  type: LoadBalancer
  selector:
    app: angularapp
  ports:
  - protocol: TCP
    port: 4204
    targetPort: 4204
